# Parse-Flaticon

./: CMakeLists.txt  main.cpp  parseFlaticon.qbs
